--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "tic-tac-toe",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
+  "author": "Erhan Gundogan <erhan.gundogan@gmail.com>",
   "devDependencies": {
-    "react-scripts": "3.2.0"
+    "@testing-library/react": "^9.4.0",
+    "jest": "^24.9.0",
+    "react-scripts": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
