--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "Erhan Gundogan <erhan.gundogan@gmail.com>",
   "devDependencies": {
     "@testing-library/react": "^9.4.0",
+    "@testing-library/react-hooks": "^3.2.1",
     "jest": "^24.9.0",
-    "react-scripts": "^3.3.0"
+    "react-scripts": "^3.3.0",
+    "react-test-renderer": "^16.12.0"
   },
   "scripts": {
     "start": "react-scripts start",
