travis and solarcloud config update

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=tic-tac-toe
 sonar.projectName=tic-tac-toe
+sonar.organization=erhangundogan
 sonar.sources=src
 sonar.exclusions=**/__tests__/**
 sonar.tests=.
