--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ install: yarn
 dist: trusty
 addons:
   sonarcloud:
-    organization: "ERHANGUNDOGAN"
+    organization: erhangundogan
+    token: ${SONAR_TOKEN}
 script:
   - yarn build
   - yarn test -- --coverage --watchAll=false
