--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install: yarn
 dist: trusty
 addons:
   sonarcloud:
-    organization: erhangundogan
+    organization: 'Erhan Gundogan'
     token: ${SONAR_TOKEN}
 script:
   - yarn build
