--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.projectKey=tic-tac-toe
+sonar.projectKey=erhangundogan_tic-tac-toe
 sonar.projectName=tic-tac-toe
 sonar.organization=erhangundogan
 sonar.sources=src
